# PhantomToolKit

./: .gitignore  LICENSE  README.md  build.py  main.py  patch_js.py  phantom-screenshot.path  phantom-screenshot.service  phantomtoolkit.ini  pyproject.toml
.github/workflows/: build.yml
backend/: app.py
backend/tabs/: backup_tab.py  build_tab.py  cheats_tab.py  inventory_tab.py  main_tab.py
backend/utils/: config.py  flasks_pots.py  item_catalog.py  items.py  screenshot.py
static/css/: style.css
static/js/: app.js
static/js/tabs/: backup_tab.js  build_tab.js  cheats_tab.js  inventory_tab.js  main_tab.js
static/local/: ar.json  en.json
templates/: index.html
templates/views/: backup.html  build.html  cheats.html  inventory.html  main.html
typings/fspy/: __init__.pyi
