[project]
name = "phantomtoolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "fromsoftware-py",
    "mss>=10.2.0",
    "pillow>=12.2.0",
]

[tool.uv.sources]
fromsoftware-py = { path = "../fromsoftware-py" }

[tool.fspy]
game = "eldenring"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501", "E722", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
